--- a/server/server.properties.template
+++ b/server/server.properties.template
@@ -1,4 +1,4 @@
-motd=Gewoon Minecraft NL
+motd=\u00A7c\u00A7lGewoon\u00A7f\u00A7l Minecraft\u00A79\u00A7l NL\u00A7r\n\u00A76\u00A7oKlein maar fijn
 difficulty=normal
 max-players=5
 server-port=25000
